# fuel-tracker

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
scripts/: backup_turso.py
src/fuel_tracker/: __init__.py  __main__.py  bot.py  calc.py  chart.py  config.py  db.py  keyboards.py  parsing.py  turso.py
src/fuel_tracker/sources/: __init__.py  autodata.py  base.py  fueleconomy.py  goonet.py
tests/: test_logic.py
