[project]
name = "fuel-tracker"
version = "0.1.0"
description = "Telegram bot to track car fuel consumption (km/L) with SQLite storage and a specs scraper for rated economy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[webhooks]>=21.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
fuel-tracker = "fuel_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuel_tracker"]
